--- a/view/index.html
+++ b/view/index.html
@@ -35,7 +35,7 @@
     </div>
     <!-- 顶部登录等信息 end -->
     <!-- logo and search box start -->
-    <div class="logo_search clearAll">
+    <div class="logo_search">
         <div class="container">
             <a href="" class="mainLogo">
                 <img src="../static/images/common/logo.jpg" alt="">
@@ -45,17 +45,26 @@
                 </div>
             </a>
             <div class="searchBox">
-                <span class="searchCondition">
-                    JIS
-                </span>
-                <span class="searchCondition">
-                    JIS
-                </span>
-                <a href="" class="searchBtn"><i class="iconfont icon-search"></i></a>
+                <form action="">
+                    <select class="searchCondition" name="">
+                        <option value="1">JIS</option>
+                        <option value="1">JIS1</option>
+                        <option value="1">JIS2</option>
+                    </select>
+                    <input type="text" class="searchCondition" value="JIS-001">
+                    <a href="" class="searchBtn"><i class="iconfont icon-search"></i></a>
+                </form>
             </div>
             <div class="buySaller">
-                <a href="" class="buyItem"> <i class="iconfont icon-wode"></i> 我的环球</a>
-                <a href="" class="buyItem"><i class="iconfont icon-buycar"></i>购物车 (9)</a>
+                <div class="buyItem">
+                    <span><i class="iconfont icon-wode"></i> 我的环球</span>
+                    <ul class="down">
+                        <li><a href="" class="d_item">我的关注</a></li>
+                        <li><a href="" class="d_item">item</a></li>
+                        <li><a href="" class="d_item">item</a></li>
+                    </ul>
+                </div>
+                <a href="" class="buyItem car"><i class="iconfont icon-buycar"></i>购物车 (9)</a>
             </div>
         </div>
     </div>
@@ -361,102 +370,102 @@
                 入驻商家
             </div>
             <div class="sellerList clearAll">
-                <div class="sellerItem">
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
+                </a>
             </div>
         </div>
         <!-- 入驻商家 end -->
@@ -515,6 +524,26 @@
                 </li>
                 <li>
                     <p class="footerTitle"><i class="iconfont icon-guanyu"></i>关于平台</p>
+                    <a href="#">平台介绍</a>
+                    <a href="#">成为供应商</a>
+                    <a href="#">加入我们</a>
+                    <a href="#">联系我们</a>
+                    <a href="#">平台介绍</a>
+                    <a href="#">成为供应商</a>
+                    <a href="#">加入我们</a>
+                    <a href="#">联系我们</a>
+                    <a href="#">平台介绍</a>
+                    <a href="#">成为供应商</a>
+                    <a href="#">加入我们</a>
+                    <a href="#">联系我们</a>
+                    <a href="#">平台介绍</a>
+                    <a href="#">成为供应商</a>
+                    <a href="#">加入我们</a>
+                    <a href="#">联系我们</a>
+                    <a href="#">平台介绍</a>
+                    <a href="#">成为供应商</a>
+                    <a href="#">加入我们</a>
+                    <a href="#">联系我们</a>
                     <a href="#">平台介绍</a>
                     <a href="#">成为供应商</a>
                     <a href="#">加入我们</a>
