--- a/view/标准选择.html
+++ b/view/标准选择.html
@@ -403,10 +403,67 @@
                                             </div>
                                         </div>
                                     </div>
+
+                                    <!-- 事例table start -->
+                                    <table class="benchTable">
+                                        <thead>
+                                        <tr>
+                                            <th>TH</th>
+                                            <th>TH</th>
+                                            <th>TH</th>
+                                            <th>TH</th>
+                                            <th>TH</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                        </tr>
+                                        <tr>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                        </tr>
+                                        <tr>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                        </tr>
+                                        <tr>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                        </tr>
+                                        <tr>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                            <td>TD</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                    <!-- 事例table end -->
+
+
                                 </div>
+                            </div>
+                            <div class="flag">
+                                选择目标标准和目标产品，从而找到供应商
                             </div>
                         </div>
                         <!-- 标准选择 end -->
+
                     </div>
                 </div>
             </div>
@@ -421,102 +478,102 @@
                 入驻商家
             </div>
             <div class="sellerList clearAll">
-                <div class="sellerItem">
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
-                <div class="sellerItem">
+                </a>
+                <a href ="" class="sellerItem">
                     <p class="name">上海东方螺丝制造厂</p>
                     <p class="tel">电话：888-88888888</p>
                     <p class="other">
                         <span class="count">产品数量：<em>117877</em></span>
                         <span class="address">齐齐哈尔</span>
                     </p>
-                </div>
+                </a>
             </div>
         </div>
         <!-- 入驻商家 end -->
@@ -575,6 +632,26 @@
                 </li>
                 <li>
                     <p class="footerTitle"><i class="iconfont icon-guanyu"></i>关于平台</p>
+                    <a href="#">平台介绍</a>
+                    <a href="#">成为供应商</a>
+                    <a href="#">加入我们</a>
+                    <a href="#">联系我们</a>
+                    <a href="#">平台介绍</a>
+                    <a href="#">成为供应商</a>
+                    <a href="#">加入我们</a>
+                    <a href="#">联系我们</a>
+                    <a href="#">平台介绍</a>
+                    <a href="#">成为供应商</a>
+                    <a href="#">加入我们</a>
+                    <a href="#">联系我们</a>
+                    <a href="#">平台介绍</a>
+                    <a href="#">成为供应商</a>
+                    <a href="#">加入我们</a>
+                    <a href="#">联系我们</a>
+                    <a href="#">平台介绍</a>
+                    <a href="#">成为供应商</a>
+                    <a href="#">加入我们</a>
+                    <a href="#">联系我们</a>
                     <a href="#">平台介绍</a>
                     <a href="#">成为供应商</a>
                     <a href="#">加入我们</a>
